Details
-
Bug
-
Resolution: Done
-
P1: Critical
-
Qt Creator 6.0.0
-
None
-
QUL Sprint 1.1/2022
Description
When configuring thermo demo for STM32F769i creator, both the thermo_big and thermo_small targets get generated.
Then, when trying to run on target, there'll be the following error:
15:39:55: Starting /usr/bin/cmake --build . --target flash_thermo... ninja: error: unknown target 'flash_thermo'
Instead of flashing thermo_big or thermo_small, it tries to flash the non-existent binary "thermo".
Maybe thermo_small should be disabled for STM32F769i-discovery, since it's anyway too small for the display.
Attachments
Issue Links
- relates to
-
QTCREATORBUG-26562 WebAssembly: CMake-based Qt 6.2 QtQuick application cannot be run
- Closed
For Gerrit Dashboard: QTCREATORBUG-26656 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
386965,4 | McuSupport: provide RunConfigurations for multiple CMake targets | master | qt-creator/qt-creator | Status: MERGED | +2 | 0 |