McuSupport: provide RunConfigurations for multiple CMake targets

Task-number: QTCREATORBUG-26656
Change-Id: I2177044580f9137a5c530cc0a862d69d389fe447
Reviewed-by: Alessandro Portale <alessandro.portale@qt.io>